lxqt-globalkeys-0.14.3 / 2019-10-14
===================================

  * In write_basic_package_version_file use the right package version

lxqt-globalkeys-0.14.2 / 2019-10-09
===================================

  * Better handling of default shortcuts
  * gui: Prevent exactly the same shortcut from being repeated at startup
  * gui: Remember config window size on exiting
  * gui: Better column widths with single-line texts
  * daemon: Use XDG hierarchy if no config file given
  * daemon: move shortcuts config fom /etc/xdg/lxqt to /usr/share/lxqt
  * daemon: Fixed loading of settings
  * cmake: Enhances Qt minimum required versions handling
  * cmake: Matches lxqt-globalkeys/ui required versions
  * cmake: Updates self version handling
  * Port towards C++ headers
  * Port towards C++11 override
  * Port towards C++11 nullptr
  * Updated translations

lxqt-globalkeys-0.14.1 / 2019-02-24
===================================

  * Don't rename a widget or a class without a full refactoring
  * Updated translations
  * Note for packagers: lxqt-globalkeys now depends on liblxqt >= 0.14.1

lxqt-globalkeys-0.14.0 / 2019-01-25
===================================

  * Bumped version to 0.14.0
  * Don't use automatic string conversions
  * Improved cmake scripting
    - Set cmake_minimum_required to 3.1.0
    - Removed locale compile definitons
    - Remove QUIET from find_package
  * Moved translations from lxqt-l10n back to lxqt-globalkeys
    - Removed obsolete translation fuctionality
    - Added translation promo in README.md
  * Deleted superfluous *cs_CZ.desktop files
  * Translation updates

lxqt-globalkeys-0.13.0 / 2018-05-21
===================================

  * Update lxqt-config-globalkeyshortcuts_es.desktop
  * Spanish translation update
  * Add shortcut for lockscreen
  * CMake: Prevent in-source builds
  * fixed razor-qt -> lxqt and http -> https
  * Fixed some LXDE mentions
  * Update zh_CN translation
  * Triggering shortcuts with meta keys