@@ -1,3 +1,10 @@
+lxqt-globalkeys-0.15.0 / 2020-04-22
+===================================
+  * Removed (duplicated) string casts definitions.
+  * Removed obsolete `qBinaryFind`.
+  * Added some translation context to `main_window.ui`.
+  * Don't mix const and non-const iterators.
+
 lxqt-globalkeys-0.14.3 / 2019-10-14
 ===================================
 
